# parla

./: .gitignore  LICENSE  README.md  app.md  audio.md  data.md  next-steps.md  package-lock.json  package.json  plan.md  setup.sh
mockups/: 01-onboarding.html  02-dashboard.html  03-conversation.html  04-flashcards.html  05-progress.html  06-settings.html  styles.css
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  pipeline.rs  playback.rs  resampler.rs
src-tauri/src/db/: grammar_seeds.rs  mod.rs
src-tauri/src/llm/: mod.rs  parser.rs  prompt.rs
src-tauri/src/stt/: mod.rs
src-tauri/src/tts/: kokoro.rs  mod.rs  piper.rs
src-tauri/src/vad/: mod.rs
src/lib/: audio.ts  conversation.ts  stores.svelte.ts
src/lib/components/: Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/conversation/: +page.svelte
src/routes/flashcards/: +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/progress/: +page.svelte
