[package]
name = "duo"
version = "0.1.0"
edition = "2021"

[lib]
name = "duo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.16"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17"
